<resources>
    <integer name="defaultPort">7070</integer>
    <string name="defaultIP">198.27.14.217</string>
    <string name="app_name">Dots N Boxes</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="action_LogOut">Log out</string>

    <string name="logInTab">Log in</string>
    <string name="signUpTab">Sign up</string>
    
    <string name="logInFrag_Username">UserName</string>
    <string name="logInFrag_Password">Password</string>

    <string name="signUpFrag_Username">UserName</string>
    <string name="signUpFrag_Password">Password</string>
    <string name="signUpFrag_ConfirmPassword">Confirm password</string>

    <string name="PlayerCardFrag_ProfileButton">Profile</string>
    <string name="PlayerCardFrag_ChallengeButton">Challenge</string>
    <string name="PlayerCardFrag_Username">Username</string>
    <string name="PlayerCardFrag_GamesWonCount">Games Won</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_lobby">Lobby</string>
</resources>
