<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="hugra.dotsnboxes.SignUpFrag">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|top">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUpTab"
            android:id="@+id/SignUpFrag_SignUpButton"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal|bottom"
            android:fillViewport="false"
            android:layout_above="@+id/SignUpFrag_SignUpButton"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="false">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal">

                <RelativeLayout
                    android:id="@+id/relativeLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_centerVertical="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_above="@+id/SignUpFrag_SignUpButton">

                    <EditText
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/SignUpFrag_PasswordBox"
                        android:layout_below="@+id/textView4"
                        android:layout_centerHorizontal="true"
                        android:inputType="textPassword"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/signUpFrag_Username"
                        android:id="@+id/textView3"
                        android:layout_marginTop="0dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignStart="@+id/SignUpFrag_PasswordBox"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/signUpFrag_Password"
                        android:id="@+id/textView4"
                        android:layout_below="@+id/SignUpFrag_UsernameBox"
                        android:layout_alignStart="@+id/SignUpFrag_UsernameBox"
                        android:layout_marginTop="37dp"/>

                    <EditText
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/SignUpFrag_UsernameBox"
                        android:inputType="text|textVisiblePassword"
                        android:layout_below="@+id/textView3"
                        android:layout_alignStart="@+id/textView3"/>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="false"/>
    </RelativeLayout>
</FrameLayout>
